# cpp-opengl-learn

./: README.md
Get-start/Texture/: CMakeLists.txt
Get-start/Texture/inc/: ebo.h  vbo.h
Get-start/Texture/lib/glfw-3.4/: Makefile  cmake_install.cmake  cmake_uninstall.cmake
Get-start/Texture/lib/glfw-3.4/docs/: Makefile  cmake_install.cmake
Get-start/Texture/lib/glfw-3.4/src/: Makefile  cmake_install.cmake  glfw3.pc
Get-start/Texture/resources/vertexes/: vertex.glsl
Get-start/Texture/src/: main.cpp
Modeling/Mesh/: CMakeLists.txt
Modeling/Mesh/.cache/clangd/index/: _fixes.hpp.2BB8109F5D3E609A.idx  _vectorize.hpp.75A3D9F705FCB191.idx  camera.cpp.6DC01EFDB4DD84BE.idx  camera.h.3855C17473F0DB4A.idx  cocoa_init.m.6F72603E86904284.idx  cocoa_joystick.h.C79EC1C19E2CCE72.idx  cocoa_joystick.m.1A3A5117AA44BC5B.idx  cocoa_monitor.m.6764278B3A4DFD61.idx  cocoa_platform.h.9349B4B068C46FC5.idx  cocoa_time.c.B12AB73C21244ECB.idx  cocoa_time.h.8EC91184083127B7.idx  cocoa_window.m.98CE21E140E52583.idx  common.hpp.62645F49EBEE7662.idx  compute_common.hpp.294E0813A1971E23.idx  compute_vector_relational.hpp.B80C8EA0A772B906.idx  constants.hpp.9F3BF1A08E39B0C9.idx  constants.inl.054766BC5CA35363.idx  context.c.FFA588A2C58051A4.idx  ebo.cpp.0712E3BE1E94BFED.idx  ebo.h.6175A8F0E0C5118F.idx  egl_context.c.B5A34D237BB2E021.idx  epsilon.hpp.59ECD3029212F763.idx  epsilon.inl.F2041CDD79CC4113.idx  exponential.hpp.229359F85508F085.idx  extension.cpp.C873AE12DB490CEF.idx  extension.h.C404EA72621E370C.idx  func_common.inl.01CDA156467E2E1F.idx  func_exponential.inl.9056E265086D743F.idx  func_geometric.inl.BD8686C91BAD97D3.idx  func_integer.inl.5306C40FCBFF78D8.idx  func_matrix.inl.6B5B32B7D85C140E.idx  func_packing.inl.2708547B60DC5513.idx  func_trigonometric.inl.7036D103018C5EC4.idx  func_vector_relational.inl.42F0CF27C63918C8.idx  fwd.hpp.558C10F63B80303C.idx  geometric.hpp.FA2884968269AEFB.idx  glad.c.CCFC147E90055192.idx  glad.h.5F14C0F31FBFEF1E.idx  glfw3.h.33B6EF128D05AB42.idx  glfw3.h.F5A239AF257BA19E.idx  (+196 more)
Modeling/Mesh/inc/: camera.h  mesh.h  shader.h  texture.h  vbo.h
Modeling/Mesh/lib/glfw-3.4/: Makefile  cmake_install.cmake  cmake_uninstall.cmake
Modeling/Mesh/lib/glfw-3.4/docs/: Doxyfile  Makefile  cmake_install.cmake
Modeling/Mesh/resources/fragments/: floor.frag  object.frag
Modeling/Mesh/resources/vertices/: object.vert
Modeling/Mesh/src/: main.cpp  mesh.cpp
(+1856 files in other folders)
